--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .Jeremy {
   grid-row: span 2;   
   grid-column: span 1;
-  background-color: hsl(246, 80%, 60%);
+  background-color: hsl(247, 85%, 10%);
   border-radius: 15px;
   overflow: hidden;
   display: flex;
@@ -35,11 +35,12 @@ body {
   justify-content: space-between;
 }
 
-.profile-info {
+.jeremy-info {
+    background-color: hsl(246, 80%, 60%);
   padding: 30px;
 }
 
-.profile-info img {
+.jeremy-info img {
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -47,12 +48,13 @@ body {
   margin-bottom: 20px;
 }
 
-.profile-info p {
+ p {
   font-size: 14px;
   opacity: 0.7;
+  color: hsl(40, 19%, 88%);
 }
 
-.profile-info h2 {
+h2 {
   font-size: 26px;
   font-weight: 400;
   line-height: 1.3;
@@ -64,6 +66,11 @@ body {
   gap: 15px;
   padding: 25px 30px;
   background-color: hsl(235, 46%, 20%);
+  color: hsl(236, 100%, 87%);
+  font-weight: 100;
+  margin-top: -20px;
+  flex: 1;
+
 }
 
 .time p {
@@ -72,42 +79,95 @@ body {
   cursor: pointer;
 }
 
-.time p:hover {
-  color: white;
-}
-
-.card {
-  position: relative;
+.card-work{ background-color: hsl(15, 100%, 70%);
+osition: relative;
   border-radius: 15px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
+
 }
 
-.card-icon {
+.work-icon {
   height: 60px;
   display: flex;
   justify-content: flex-end;
   padding: 10px;
+  cursor: pointer;
+  image-position:border-top-right;
+  image-width:50px;
+image-height:50px;
+image-opacity:0.3;
 }
 
-.card-icon img {
-  width: 50px;
-  opacity: 0.3;
-}
-
-.card-content {
+.work-content {
   background-color: hsl(235, 46%, 20%);
   border-radius: 15px 15px 0 0;
   padding: 25px;
   margin-top: -20px;
-  flex: 1;
+  flex:1;
 }
+.play{background-color: hsl(195, 74%, 62%);
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.play-icon{
+    height: 60px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+  cursor: pointer;
+    image-position:border-top-right;
+    image-width:50px;
+    image-height:50px;
+    image-opacity:0.3;
+}
+.play-content{ background-color: hsl(235, 46%, 20%);
+  border-radius: 15px 15px 0 0;
+  padding: 25px;
+  margin-top: -20px;
+  flex:1;}
 
+  .study{
+    background-color: hsl(348, 100%, 68%);
+    display: flex;
+  }
+.study-icon{height: 60px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+  cursor: pointer;
+    image-position:border-top-right;
+    image-width:50px;
+    image-height:50px;
+    image-opacity:0.3;}
+    .study-content{
+background-color: hsl(235, 46%, 20%);
+  border-radius: 15px 15px 0 0;
+  padding: 25px;
+  margin-top: -20px;
+  flex:1;}
+  .exercise{
+ background-color: hsl(145, 58%, 55%);
+    display: flex;
+  }
+  .exercise-icon{
+    display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+  cursor: pointer;
+    image-position:border-top-right;
+    image-width:50px;
+    image-height:50px;
+    image-opacity:0.3;
+  }
+  .exercise-content{}
 .card-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .card-header h3 {
@@ -124,10 +184,9 @@ body {
   font-size: 14px;
   color: hsl(236, 100%, 87%);
 }
-.work { background-color: hsl(15, 100%, 70%); }
-.play { background-color: hsl(195, 74%, 62%); }
-.study { background-color: hsl(348, 100%, 68%); }
-.exercise { background-color: hsl(145, 58%, 55%); }
+
+
+.exercise { }
 .social { background-color: hsl(264, 64%, 52%); }
 .selfcare { background-color: hsl(43, 84%, 65%); }
 
@@ -144,7 +203,7 @@ body {
     align-items: center;
   }
 
-  .profile-info {
+  .jeremy-info {
     display: flex;
     align-items: center;
     gap: 15px;
